--- a/base.ipynb
+++ b/base.ipynb
@@ -53,14 +53,14 @@
       "cell_type": "code",
       "source": [
         "# Labels\n",
-        "# Gitlab: https://gitlab.com/2er0/pres/raw/aeb84257634be88267f79b2cde7414d29216e38f/workshop/small_filtered_labels.npy\n",
+        "# Gitlab: https://gitlab.com/2er0/pres/raw/fhLUG-TF/workshop/small_filtered_labels.npy\n",
         "# Drive: https://drive.google.com/file/d/1OFzaoNiY_E9TXhp-pZSQBCgJTjnKyEMq/view?usp=sharing\n",
-        "!wget --no-check-certificate 'https://gitlab.com/2er0/pres/raw/aeb84257634be88267f79b2cde7414d29216e38f/workshop/small_filtered_labels.npy' -O small_filtered_labels.npy\n",
+        "!wget --no-check-certificate 'https://gitlab.com/2er0/pres/raw/fhLUG-TF/workshop/small_filtered_labels.npy' -O small_filtered_labels.npy\n",
         "\n",
         "# Images\n",
-        "# Gitlab: https://gitlab.com/2er0/pres/raw/aeb84257634be88267f79b2cde7414d29216e38f/workshop/small_filtered_images.npy\n",
+        "# Gitlab: https://gitlab.com/2er0/pres/raw/fhLUG-TF/workshop/small_filtered_images.npy\n",
         "# Drive: https://drive.google.com/file/d/1Jsoi8BysEbaiHijTFYmzS_6yJZqmXwUw/view?usp=sharing\n",
-        "!wget --no-check-certificate 'https://gitlab.com/2er0/pres/raw/aeb84257634be88267f79b2cde7414d29216e38f/workshop/small_filtered_images.npy' -O small_filtered_images.npy"
+        "!wget --no-check-certificate 'https://gitlab.com/2er0/pres/raw/fhLUG-TF/workshop/small_filtered_images.npy' -O small_filtered_images.npy"
       ],
       "execution_count": 0,
       "outputs": []
@@ -476,9 +476,9 @@
       "cell_type": "code",
       "source": [
         "# face detector\n",
-        "# Gitlab: https://gitlab.com/2er0/pres/raw/aeb84257634be88267f79b2cde7414d29216e38f/workshop/haarcascade_frontalface_default.xml\n",
+        "# Gitlab: https://gitlab.com//2er0/pres/raw/fhLUG-TF/workshop/haarcascade_frontalface_default.xml\n",
         "# Drive: https://drive.google.com/file/d/1xSUK0snZeeJ_e1ekRaI-8rYHm_MNeuwh\n",
-        "!wget --no-check-certificate 'https://gitlab.com/2er0/pres/raw/aeb84257634be88267f79b2cde7414d29216e38f/workshop/haarcascade_frontalface_default.xml' -O haarcascade_frontalface_default.xml"
+        "!wget --no-check-certificate 'https://gitlab.com//2er0/pres/raw/fhLUG-TF/workshop/haarcascade_frontalface_default.xml' -O haarcascade_frontalface_default.xml"
       ],
       "execution_count": 0,
       "outputs": []
@@ -513,12 +513,13 @@
         "clahe = cv.createCLAHE(clipLimit=2.0, tileGridSize=(8, 8))\n",
         "\n",
         "emoMap = {0: \"angry\",\n",
-        "          1: \"fear\",\n",
-        "          2: \"happy\",\n",
-        "          3: \"sad\",\n",
-        "          4: \"surprise\",\n",
-        "          5: \"neutral\",\n",
-        "          6: \"contempt\"}"
+        "          1: \"disgust\", # Dropped\n",
+        "          2: \"fear\",\n",
+        "          3: \"happy\",\n",
+        "          4: \"sad\",\n",
+        "          5: \"surprise\",\n",
+        "          6: \"neutral\",\n",
+        "          7: \"contempt\"} # Dropped"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1118,6 +1119,7 @@
         "- Daniel Knittl-Frank\n",
         "- Rainhard Findling\n",
         "- Gerald Zwettler\n",
+        "- Stephan Dreiseitl\n",
         "- ...\n"
       ]
     }
